# dnd-tools

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.litellm.yml  docker-compose.yml  litellm.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md
scripts/: ensure-env.ps1
src/ai_tools/: generator.py
src/image_generation/: comfyui.py
src/image_processing/: portrait_pdf_gen.py  utils.py
src/map_making/: generator.py
src/web/: app.py  db.py  paths.py
src/web/templates/: base.html  campaign_detail.html  campaigns.html  index.html
src/web/templates/partials/: artifact_list.html  campaign_list.html  job_list.html  job_row.html
src/workflows/: campaign_pack.py
tests/: test_basic.py
